# Sleuth

./: .gitignore  Anchor-Attendance.csv  Anchors_Feb'26.csv  DOCS.md  Jan'26- LeaveBal.csv  README.md  SamplePaysheet.xlsx  Sleuth_AI_Context.md  engine.py  main.py  payroll_output.csv  profile.md  pyproject.toml
core/: config.py  investigator.py  invoice_processor.py  payroll_engine.py  vector_store.py  zoho_client.py
data/demo_data/evidence/banking_docs/: SIB-LN-1002_Legal_Opinion_Report.txt  (+2 more)
data/demo_data/ledgers/: sib_cbs_extract_20260303_085854.csv  system_a_vendor_ledger.csv  system_a_vendor_ledger_20260226_185119.csv  system_a_vendor_ledger_20260226_190832.csv  system_b_erp_ledger_20260226_185119.csv  system_b_erp_ledger_20260226_190832.csv
data/payroll_reference/: Anchor_Attendance.csv  Anchors_Feb26.csv  Jan26_LeaveBal.csv  formula_config.json
demo_data/evidence/emails/: clue_0.txt  noise_7.txt
demo_data/evidence/invoices/: clue_3.txt
demo_data/evidence/notices/: clue_2.txt
demo_data/ledgers/: ledger_sub_a.csv  ledger_sub_b.csv
demo_data_new/evidence/emails/: Catering_Dispute_Holiday_Party.txt  RE_Shipping_Delay_INV-1008_932.txt
demo_data_new/evidence/invoices/: INV-0999_Zoom_Subscription.txt
demo_data_new/evidence/messaging/: slack_export_finance_channel_Oct.txt
demo_data_new/evidence/notices/: State_Dept_Rev_Notice_Tax_Update.txt
demo_data_new/ledgers/: system_b_erp_ledger.csv
static/css/: style.css
static/js/: app.js
templates/: index.html
utilities/: demo_data.py  generate_bank_data.py  xlsx_to_csv_with_formulas.py
(+8 files in other folders)
