[project]
name = "sleuth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.1",
    "qdrant-client[fastembed]>=1.17.0",
    "streamlit>=1.52.2",
]
